--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,1 +1,22 @@
 <h1>This is Ticket Viewer Homepage</h1>
+
+<button class="connect-button" id="connect-button">Connect to Zendesk</button>
+
+<% for (i=0; i < response.length; i++) { %>
+    <ul>
+
+        <li>
+            <%= response[i]%>
+        </li>
+        <li>
+            <%= response[i]%>
+        </li>
+        <li>
+            <%= response[i]%>
+        </li>
+        <li>
+            <%= response[i]%>
+        </li>
+    </ul>
+    <% } %>
+        <script type="text/javascript" src="/static/home.js"></script>
