--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,22 +1,16 @@
 <h1>This is Ticket Viewer Homepage</h1>
 
 <button class="connect-button" id="connect-button">Connect to Zendesk</button>
+<ul>
+    <% for (i=0; i < tickets.length; i++) { %>
 
-<% for (i=0; i < response.length; i++) { %>
-    <ul>
+        <li>
+            <%= tickets[i].id %>
+                <div>
+                    <%= JSON.stringify(tickets[i]) %>
+                </div>
+        </li>
 
-        <li>
-            <%= response[i]%>
-        </li>
-        <li>
-            <%= response[i]%>
-        </li>
-        <li>
-            <%= response[i]%>
-        </li>
-        <li>
-            <%= response[i]%>
-        </li>
-    </ul>
-    <% } %>
-        <script type="text/javascript" src="/static/home.js"></script>
+        <% } %>
+</ul>
+<script type="text/javascript" src="/static/home.js"></script>
