--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,10 +1,13 @@
 <h1>This is Ticket Viewer Homepage</h1>
+<h2>Here are all tickets for your account</h2>
 
 <ul>
     <% for (i=0; i < tickets.length; i++) { %>
 
         <li class="ticketId">
+            <b>Ticket ID:</b>
             <%= tickets[i].id %>
+                <b>Ticket status:</b>
                 <%= tickets[i].status %>
                     <div class="ticket-card">
 
