--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,19 +24,25 @@ body {
     line-height: 1.3em;
 }
 
-p, li, td, th {
+p {
     font-family: 'Lato', sans-serif;
-    font-size: 1em;
-    line-height: 1.5em;
-    padding: 1.5em;
-    list-style-type: none;
+    font-size: 2em;
     font-size: 1.3em;
     font-weight: bold;
-    color: #03b8af;
+    color: #03b8af;   
+}
+
+li {
+    line-height: 1.5em;
+    font-size: 1.5em;
+    list-style-type: none;
+    padding: 1.5em;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    color: white;
+    font-weight: bold;
 }
 
 h1, h2, h3, b {
@@ -45,10 +51,22 @@ h1, h2, h3, b {
    text-align: center;
    margin: 30px 0;
    line-height: 1.25em;
+   font-size: 2em;
 }
 
-h1 {
-    font-size: 2em;
+b {
+color:#03b8af;
+   font-family: 'Crimson Text', serif;
+   text-align: center;
+   margin: 30px 0;
+   line-height: 1.25em;
+   font-size: 1em;
+   padding-right: 0.5em;
+}
+
+.ticket-card {
+    text-align: left;
+    font-size: 1em;
 }
 
 
