--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,7 +55,7 @@ h1, h2, h3, b {
 }
 
 b {
-color:#03b8af;
+   color:#03b8af;
    font-family: 'Crimson Text', serif;
    text-align: center;
    margin: 30px 0;
@@ -69,6 +69,22 @@ color:#03b8af;
     font-size: 1em;
 }
 
+.cursor {
+    display: flex;
+    justify-content: center;  
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+    color:#03b8af;
+  }
+  
+  a:hover {
+    background-color: #ddd;
+    color: black;
+  }
 
 
 
