--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,10 +9,9 @@ html {
 }
 
 body {
-    background-color: #54575e;
     margin: 0;
     border: 0;
-    color: white;
+    background-color: #292d38;
     width: 100%;
 }
 
@@ -29,7 +28,8 @@ p {
     font-size: 2em;
     font-size: 1.3em;
     font-weight: bold;
-    color: #03b8af;   
+    color: #00bb8e;  
+    text-align: center; 
 }
 
 li {
@@ -55,7 +55,7 @@ h1, h2, h3, b {
 }
 
 b {
-   color:#03b8af;
+   color:#00bb8e;
    font-family: 'Crimson Text', serif;
    text-align: center;
    margin: 30px 0;
@@ -78,14 +78,28 @@ a {
     text-decoration: none;
     display: inline-block;
     padding: 8px 16px;
-    color:#03b8af;
+    color:#00bb8e;
   }
   
-  a:hover {
-    background-color: #ddd;
-    color: black;
+button {
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+    background-color: transparent;
+    height: auto;
+    width: auto;
+    margin: 2em;
+    padding: 0;
+    color: #00bb8e;
   }
 
+  .back-button {
+      margin: 0 auto;
+      display: block;
+      padding: 1.5em;
+      
+  }
+     
+     
 
-
-    
+  
