--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,1 +1,6 @@
 <h1>Sorry, something went wrong</h1>
+<p>
+    <%=err.message%>
+</p>
+
+<button class="back-button" onclick="history.back()">Back</button>
