--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,12 +24,10 @@ body {
 }
 
 p {
-    font-family: 'Lato', sans-serif;
-    font-size: 2em;
-    font-size: 1.3em;
-    font-weight: bold;
-    color: #00bb8e;  
-    text-align: center; 
+    font-family: 'Crimson Text', serif;
+    font-size: 1em;
+    color: white;  
+    text-align: left; 
 }
 
 li {
@@ -37,16 +35,26 @@ li {
     font-size: 1.5em;
     list-style-type: none;
     padding: 1.5em;
-    width: 50%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    color: white;
+    color: #00bb8e;
     font-weight: bold;
+    font-family: 'Crimson Text', serif;
 }
 
-h1, h2, h3, b {
-   color:#ffffff;
+b {
+    color: white;
+    font-family: 'Crimson Text', serif;
+    text-align: center;
+    margin: 30px 20px;
+    line-height: 1.25em;
+    font-size: 1em;
+    padding-right: 0.5em;
+ }
+h1 {
+color:#00bb8e;
    font-family: 'Crimson Text', serif;
    text-align: center;
    margin: 30px 0;
@@ -54,14 +62,13 @@ h1, h2, h3, b {
    font-size: 2em;
 }
 
-b {
+h2, h3, h4 {
    color:#00bb8e;
    font-family: 'Crimson Text', serif;
    text-align: center;
    margin: 30px 0;
    line-height: 1.25em;
    font-size: 1em;
-   padding-right: 0.5em;
 }
 
 .ticket-card {
@@ -91,12 +98,14 @@ button {
     margin: 2em;
     padding: 0;
     color: #00bb8e;
+    font-family: 'Crimson Text', serif;
   }
 
-  .back-button {
+.back-button {
       margin: 0 auto;
       display: block;
       padding: 1.5em;
+      font-family: 'Crimson Text', serif;
       
   }
      
